--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,7 @@
+language: php
 
+# list any PHP version you want to test against
+php:
+  - '7.3'
+
+script: phpunit --configuration phpunit.xml --coverage-text
