--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,5 @@ before_script:
   # Install dependencies
   - bash ci/docker_install.sh > /dev/null
 
-test:app
+test:app:
     script: phpunit --configuration phpunit.xml --coverage-text
