--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-phpunit:
-  stage: test
+# Select image from https://hub.docker.com/_/php
+image: php:5.6
+
+before_script:
+  # Install dependencies
+  - bash ci/docker_install.sh > /dev/null
+
+test:app:
   script:
-    - composer install
-    - vendor/bin/phpunit --configuration phpunit.xml --covarage-text
-  artifacts:
-    when: always
-    reports:
-      junit: report.xml
+    - phpunit --configuration phpunit_myapp.xml
