--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ before_script:
 
 test:app:
   script:
-    - phpunit --configuration phpunit.xml
+    - phpunit --configuration phpunit.xml --coverage-text
