--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,8 @@ before_script:
 
 test:app:
   script:
-    - phpunit --configuration phpunit.xml --coverage-text
+    - phpunit --configuration phpunit.xml --coverage-text --log-junit report.xml
+artifacts:
+    when: always
+    reports:
+      junit: report.xml
