--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,12 @@ image: php:7.3
 before_script:
   # Install dependencies
   - bash ci/docker_install.sh > /dev/null
-
-test:app:
+phpunit:
+  stage: test
   script:
-    - phpunit --configuration phpunit.xml --coverage-text --log-junit report.xml
-artifacts:
+    - composer install
+    - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --log-junit report.xml
+  artifacts:
     when: always
     reports:
       junit: report.xml
