--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ phpunit:
   stage: test
   script:
     - composer install
-    - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --log-junit report.xml
+    - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --log-junit <testing-repo>/results/report.xml
   artifacts:
     when: always
     reports:
-      junit: report.xml
+      junit: <testing-repo>/results/report.xml
