--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ phpunit:
   stage: test
   script:    
     - composer install
-    - vendor/bin/phpunit --configuration /phpunit.xml --coverage-text 
+    - vendor/bin/phpunit --configuration phpunit.xml
   artifacts:
     when: always
     reports:
