--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,5 @@ before_script:
   - bash ci/docker_install.sh > /dev/null
 test:app:
   script:
-    - phpunit --configuration phpunit.xml --coverage-text --log-junit report.xml
+    - phpunit --configuration phpunit.xml --coverage-text --log-junit Test/report.xml
  
