--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,8 @@ before_script:
   - php composer.phar install
 phpunit:
   stage: test
-  script:
-    - composer install
-    - vendor/bin/phpunit --configuration /phpunit.xml --log-junit report.xml
+  script:    
+    - phpunit --configuration /phpunit.xml --log-junit report.xml
   artifacts:
     when: always
     reports:
