--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ before_script:
 phpunit:
   stage: test
   script:    
-    - phpunit --configuration /phpunit.xml --log-junit Tests/report.xml
+    - phpunit --configuration phpunit.xml --log-junit Tests/report.xml
   artifacts:
     when: always
     reports:
