--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ phpunit:
   stage: test
   script:    
     - phpunit --configuration phpunit.xml --log-junit Tests/report.xml
+    - cat Tests/report.xml | grep -o 'Total[^%]*%'
   artifacts:
     when: always
     reports:
