--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ phpunit:
   stage: test
   script:    
     - phpunit --configuration phpunit.xml --log-junit Tests/report.xml --coverage-text --colors=never
-  coverage: \s+Lines:\s+(\d+\.\d+%)
+  coverage: ^\s*Lines:\s*\d+.\d+\%
   artifacts:
     when: always
     reports:
