--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
 phpunit:
   stage: test
   script:    
-    - phpunit --configuration phpunit.xml --log-junit Tests/report.xml --coverage-text --colors=never
+    - phpunit --configuration phpunit.xml  --coverage-text --colors=never
   coverage: '/^\s*Lines:\s*\d+.\d+\%/'
   artifacts:
     when: always
