--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,12 @@ before_script:
   # Install Xdebug
   - pecl install xdebug
   - docker-php-ext-enable xdebug
+  # Here to change xdebug mode
+  - echo xdebug.mode=coverage > /usr/local/etc/php/conf.d/xdebug.ini 
 phpunit:
   stage: test
   script:    
-    - phpunit --xdebug.mode=coverage --configuration phpunit.xml --log-junit Tests/report.xml --coverage-text --colors=never
+    - phpunit  --configuration phpunit.xml --log-junit Tests/report.xml --coverage-text --colors=never
   coverage: '/^\s*Lines:\s*\d+.\d+\%/'
   artifacts:
     when: always
