--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,10 @@
-version: 2
+machine:
+  php:
+    version: 7.0.4
 
-jobs:
-  build:
-    environment:
-      CC_TEST_REPORTER_ID: YOUR_CODE_CLIMATE_REPORTER_ID
-    docker:
-      - image: notnoopci/php:7.1.5-browsers
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - run: sudo pecl channel-update pecl.php.net
-      - run: sudo pecl install xdebug && sudo docker-php-ext-enable xdebug
-      - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      - run: chmod +x ./cc-test-reporter
-      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/phpunit
-      - run: ./cc-test-reporter before-build
-      - run: sudo vendor/bin/phpunit --coverage-clover clover.xml
-      - run: ./cc-test-reporter after-build -t clover --exit-code $?
+
+
+
+test:
+  override:
+      - vendor/bin/phpunit
