--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,28 @@
-machine:
-  php:
-    version: 7.0.4
+# PHP CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-php/ for more details
+#
+version: 2
+jobs:
+  test:
+    docker:
+      # Specify the version you desire here
+      - image: circleci/php:7.2-stretc
 
+    steps:
+      - checkout
+      # run tests with phpunit or codecept
+      #- run: ./vendor/bin/phpunit
+      # this example uses codecept but you're not limited to it
+      - run: ./vendor/bin/codecept build
+      - run: ./vendor/bin/codecept run --xml result.xml
+      - store_test_results:
+          path: tests/_output
+      - store_artifacts:
+          path: tests/_output
 
-
-
-test:
-  override:
-      - vendor/bin/phpunit
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - test
