--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,13 @@
-version: 2 # use CircleCI 2.0
+machine:
+  php:
+    version: 7.1.0
+dependencies:
+  override:
+    - yarn
+    - composer install --no-interaction
+  cache_directories:
+    - ~/.cache/yarn
 
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
-    docker: # run the steps with Docker
-      - image: circleci/php:7.2-node-browsers # ...with this image as the primary container; this is where all `steps` will run
-    working_directory: ~/laravel # directory where steps will run
-    steps: # a set of executable commands
-      - checkout # special step to check out source code to working directory
-      - run: sudo apt install -y libsqlite3-dev zlib1g-dev
-      - run: sudo docker-php-ext-install zip
-      - run: sudo composer self-update
-      - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
-          keys:
-            - composer-v1-{{ checksum "composer.lock" }}
-            # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
-            - composer-v1-
-      - run: ./vendor/bin/phpunit
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+test:
+  override:
+    - vendor/bin/phpunit
