--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,23 @@
-version: 2
+version: 2.1
+
+# Define the jobs we want to run for this project
 jobs:
   build:
     docker:
-      - image: php:7.1-apache
-        environment:
-          APP_ENV: test
+      - image: cimg/base:2023.03
     steps:
-      - run:
-          name: Install system packages
-          command: apt-get update && apt-get -y install git
-      - run:
-          name: Install PHP extensions
-          command: docker-php-ext-install pdo
       - checkout
-      - run:
-          name: Install project dependencies
-          command: php install
-      - run:
-          name: Run CS tests
-          command: vendor/bin/phpcs
-      - run:
-          name: Run Unit tests
-          command: vendor/bin/phpunit
+      - run: echo "this is the build job"
+  test:
+    docker:
+      - image: cimg/base:2023.03
+    steps:
+      - checkout
+      - run: echo "this is the test job"
+
+# Orchestrate our job run sequence
+workflows:
+  build_and_test:
+    jobs:
+      - build
+      - test
