--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,31 +7,51 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/php:7.1-node-browsers
-      
+      - image: framgia/laravel-workspace
+
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
-
-    working_directory: ~/CRM
+      # documented at https://circleci.com/docs/2.0/circleci-images/      
+    working_directory: ~/repo
 
     steps:
       - checkout
 
+      - run: chmod -R 777 storage
+      - run: cp .env.testing.example .env
+
       # Download and cache dependencies
+      # Composer
       - restore_cache:
+          name: Restore composer cache
           keys:
-          - v1-dependencies-{{ checksum "composer.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
+          - composer-{{ checksum "composer.json" }}
+          - composer-
       - run: composer install -n --prefer-dist
+      - save_cache:
+          name: Store composer cache
+          key: composer-{{ checksum "composer.json" }}
+          paths:
+            - vendor
+      # Yarn
+      - restore_cache:
+          name: Restore yarn cache
+          keys:
+            - yarn-{{ checksum "yarn.lock" }}
+            - yarn-
+      - run: yarn
+      - save_cache:
+          paths:
+            - node_modules
+          key: yarn-{{ checksum "composer.json" }}
 
-       - save_cache:
-           paths:
-             - ./vendor
-           key: v1-dependencies-{{ checksum "composer.json" }}
-        
+      - run: npm run production      
       # run tests!
-      - run: phpunit
+      - run:
+          command: |
+            mkdir -p /phpunit &&
+            php -dzend_extension=xdebug.so vendor/bin/phpunit --coverage-clover=phpunit/coverage-clover.xml --coverage-html=phpunit/coverage
+      - store_test_results:
+          path: /phpunit
+      - store_artifacts:
+          path: /phpunit
