--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,5 @@ jobs:
       
       - run: composer require phpunit/phpunit      
       # run tests!
-      - run: vendor/bin/phpunit ./tests
+      - run: vendor/bin/phpunit 
      
